# chinvex

./: .gitignore  =2.2.0  CLAUDE.md  FINAL_VISUAL_TEST.ps1  P5_IMPLEMENTATION_PLAN_PARTIAL.md  README.md  REAL_FIX_EXPLANATION.md  TEST_REAL_FIX.ps1  WINDOW_FIX_VERIFICATION.md  chinvex-repomix-output.xml  current_task.xml  ecosystem.config.js  pyproject.toml  run_smoke_test.ps1  start_gateway.ps1  test_window_fix.ps1
docs/: AGENTS.md  CONNECTION_MANAGEMENT.md  MEMORY_SYSTEM_HOW_IT_WORKS.md  chatgpt-integration.md  chinvex_openapi_v0.3.0.json  project_memory_spec.md
scripts/: e2e_smoke_p2.py  e2e_smoke_p3.py  e2e_smoke_p4.py  morning_brief.ps1  scheduled_sweep.ps1  scheduled_sweep_launcher.vbs  test_gateway_p2.py
specs/: BOOTSTRAPPING_COMPLETION_SPEC.md  P0_IMPLEMENTATION_SPEC.md  P2_IMPLEMENTATION_SPEC.md  P3_IMPLEMENTATION_SPEC.md  P5_IMPLEMENTATION_SPEC.md  P5a_IMPLEMENTATION_SPEC.md  P5b_IMPLEMENTATION_SPEC.md
tests/: test_archive_commands.py  test_archive_schema.py  test_auto_archive.py  test_auto_migration.py  test_chinvex_golden_queries.py  test_chunk_key_storage.py  test_cli_cross_context.py  test_cli_status.py  test_codex_ingestion.py  test_conversation_chunking.py  test_cross_context_search.py  test_digest.py  test_eval_baseline.py  test_eval_cli.py  test_eval_criteria.py  test_eval_metrics.py  test_eval_runner.py  test_eval_schema.py  test_fingerprints.py  test_git_analyzer.py  test_global_status.py  test_hooks.py  test_index_meta.py  test_ingest_delta.py  test_ingest_result.py  test_ingest_with_context.py  test_inline_context_creation.py  test_mcp.py  (+28 more)
(+119 files in other folders)
